--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Шифрование и Взлом текста</title>
+    <title>Лаб. 1</title>
     <style>
         body {
             background-image: url('https://clipart-library.com/images/Acbrxpyqi.jpg');
@@ -20,11 +20,11 @@
     </style>
 </head>
 <body>
-    <h1>Шифрование и Взлом текста</h1>
+    <h1>Лаб. 1</h1>
     <input type="text" id="inputText" placeholder="Введите текст" />
     <input type="number" id="shift" placeholder="Сдвиг по алфавиту" min="0" />
-    <button id="encryptButton">Зашифровать текст</button>
-    <button id="hackButton">Взломать текст</button>
+    <button id="encryptButton">Зашифровать</button>
+    <button id="hackButton">Взломать</button>
     <h2 id="outputText"></h2>
 
     <script src="main.js"></script>
