--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <input type="text" id="inputText" placeholder="Введите текст" />
     <input type="number" id="shift" placeholder="Сдвиг по алфавиту" min="0" />
     <button id="encryptButton">Зашифровать</button>
+    <button id="decryptButton">Дешифровать текст</button>
     <button id="hackButton">Взломать</button>
     <h2 id="outputText"></h2>
 
